--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
       "dev": "nodemon src/index.js"
     },
     "dependencies": {
+      "cors": "^2.8.5",
       "express": "^4.18.2",
       "mongoose": "^7.0.0",
       "dotenv": "^16.0.3"
